[package]
name = "imfwizard-gui"
version = "0.1.0"
description = "IMF Wizard Desktop GUI"
authors = ["IMF Wizard"]
edition = "2021"

[lib]
name = "imfwizard_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["time", "rt"] }
postkit = { path = "../../../postkit/rust" }
imfwizard-core = { path = "../../rust/crates/imfwizard-core" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Optimize postkit in debug builds (color math is too slow unoptimized)
[profile.dev.package.postkit]
opt-level = 2
