[package]
name = "imfwizard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IMF Wizard CLI"

[[bin]]
name = "imfwizard"
path = "src/main.rs"

[dependencies]
clap.workspace = true
imfwizard-core = { path = "../imfwizard-core" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
